# log-audits-to-elasticsearch

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  SEARCH_GUIDE.md  config-sample.yaml  create_random_log_entries.sh  docker-compose.yml  pyproject.toml  run_dev.sh  update_version.py
.github/workflows/: ci.yml
audit_logger/: config_manager.py  custom_logger.py  elastic.py  elastic_filters.py  exceptions.py  main.py  middlewares.py  utils.py
audit_logger/models/: __init__.py  actor_details.py  audit_log_entry.py  config.py  custom_base.py  env_vars.py  request.py  resource.py  response_models.py  search_params.py  server_details.py
backup/: volume_backups.sh
docker/audit-logger/: Dockerfile  entrypoint.sh
docker/elasticsearch/: check_elasticsearch_health.sh  entrypoint.sh  index_template.json  load_templates.sh
docker/kibana/: Dockerfile  generate-key.sh  kibana.yml
docker/service-audit/: Dockerfile  entrypoint.sh
service_audit/: config_manager.py  elastic.py  elastic_filters.py  main.py  middlewares.py  models.py  utils.py
service_audit/models/: __init__.py  actor.py  audit_log_entry.py  config.py  request.py  resource.py  response_models.py  search_params.py  server_details.py
