[tool.poetry]
name = "service-audit"
version = "0.1.0"
description = ""
authors = ["Robin Schulz <hello@rschu.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
slowapi = "^0.1.9"
gunicorn = "^21.2.0"
elasticsearch = "^8.12.1"
ipaddress = "^1.0.23"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
coverage = "^7.4.4"
pre-commit = "^3.6.2"
pytest-asyncio = "^0.23.6"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
types-pyyaml = "^6.0.12.20240311"
faker = "^24.3.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flake8]
max-line-count = 600
max-line-length = 100
exclude = [
    "service_audit/models/__init__.py"
]

[tool.coverage.run]
branch = true
source = ["service_audit"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"
