[tool.poetry]
name = "log-audits-to-elasticsearch"
version = "1.0.0"
description = "Log Audits To Elasticsearch"
authors = ["Robin Schulz <hello@rschu.me>"]
readme = "README.md"
homepage = "https://github.com/bulletinmybeard/log-audits-to-elasticsearch"
repository = "https://github.com/bulletinmybeard/log-audits-to-elasticsearch"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
elasticsearch = "^8.12.1"
ipaddress = "^1.0.23"
pyyaml = "^6.0.1"
elasticsearch-dsl = "^8.12.0"
toml = "^0.10.2"
faker = "^24.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
coverage = "^7.4.4"
pre-commit = "^3.6.2"
types-pyyaml = "^6.0.12.20240311"
flake8-pyproject = "^1.2.3"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flake8]
max-line-count = 600
max-line-length = 100
exclude = [
    "audit_logger/models/__init__.py"
]

[tool.coverage.run]
branch = true
source = ["audit_logger"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"
